--- a/xxl-job-admin/src/main/resources/xxl-job-admin.properties
+++ b/xxl-job-admin/src/main/resources/xxl-job-admin.properties
@@ -1,8 +1,8 @@
 ### xxl-job db  (use &amp; replace & in xml)
 xxl.job.db.driverClass=com.mysql.jdbc.Driver
-xxl.job.db.url=jdbc:mysql://erp2.test.pagoda.com.cn:15506/xxl-job?useUnicode=true&characterEncoding=UTF-8
+xxl.job.db.url=jdbc:mysql://mysql-apollo:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
 xxl.job.db.user=root
-xxl.job.db.password=123456
+xxl.job.db.password=pagoda@2018
 
 ### xxl-job email
 xxl.job.mail.host=smtp.163.com
