--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -16,10 +16,12 @@ spring.freemarker.request-context-attribute=request
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl-job?Unicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://mysql-apollo:3306/xxl-job2?Unicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root_pwd
+spring.datasource.password=pagoda@2018
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 spring.datasource.tomcat.max-wait=10000
